<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="fill_parent"
	android:layout_width="fill_parent"
	android:orientation="vertical">

	<FrameLayout android:layout_height="fill_parent" android:layout_width="fill_parent" android:layout_weight="1">

		<TextView android:text="@string/NoUpdates" android:layout_gravity="center" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/NoUpdateView"/>

		<ScrollView android:layout_height="fill_parent" android:layout_width="fill_parent" android:id="@+id/UpdateView" android:layout_weight="1" android:visibility="gone">
			<LinearLayout android:layout_height="fill_parent" android:layout_width="fill_parent" android:orientation="vertical">
				<TextView android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/OTAPreamble" android:text="@string/OTAPremable" android:gravity="center" android:layout_gravity="center_horizontal"/>
				<TextView android:layout_height="wrap_content" android:layout_width="fill_parent" android:text="@string/OTATitleLabel" android:layout_marginTop="5sp"/>
				<TextView android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_marginLeft="16dp" android:id="@+id/OTATitle"/>
				<TextView android:layout_height="wrap_content" android:layout_width="fill_parent" android:text="@string/OTAUrgencyLabel" android:layout_marginTop="5sp"/>
				<TextView android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_marginLeft="16dp" android:id="@+id/OTAUrgency"/>
				<TextView android:layout_height="wrap_content" android:layout_width="fill_parent" android:text="@string/OTADescriptionLabel" android:layout_marginTop="5sp"/>
				<TextView android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_marginLeft="16dp" android:id="@+id/OTADescription"/>
				<LinearLayout android:layout_height="wrap_content" android:layout_width="fill_parent" android:orientation="horizontal" android:layout_marginTop="5sp">
					<TextView android:layout_height="wrap_content" android:layout_width="fill_parent" android:text="@string/OTAUrlLabel" android:layout_weight="1"/>
					<TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/OTASize"/>
				</LinearLayout>
				<FrameLayout android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_marginTop="5sp">
					<Button  android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/OTAUrlButton" android:text="@string/OTAUrlButtonLabel" android:layout_gravity="center_horizontal"/>
					<EditText android:id="@+id/OTAUrl" android:bufferType="normal" android:focusableInTouchMode="false" android:selectAllOnFocus="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:visibility="gone" android:editable="false" android:longClickable="true"/>
				</FrameLayout>

			</LinearLayout>
		</ScrollView>

	</FrameLayout>

	<CheckBox android:id="@+id/OTAShow" android:text="@string/OTAShowLabel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5sp"/>

</LinearLayout>
